Fill form width overflow possible fix pt.5

--- a/components/pages/completare-cv/FillForm.css
+++ b/components/pages/completare-cv/FillForm.css
@@ -22,6 +22,7 @@
         border: 2px solid var(--gray);
         color: var(--white);
         font-size: 16px;
+        resize: none;
       }
 
       input:focus,
@@ -41,7 +42,6 @@
     fieldset {
       border: none;
       margin-top: 50px;
-      max-width: 100%;
       border: 2px solid white;
 
       legend {
